<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.optionfactory.keycloak</groupId>
    <artifactId>optionfactory-keycloak</artifactId>
    <version>6.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <description>optionfactory-keycloak parent pom</description>
    <name>${project.groupId}:${project.artifactId}</name>
    <url>https://github.com/optionfactory/optionfactory-keycloak</url>

    <scm>
        <connection>scm:git:https://github.com/optionfactory/optionfactory-keycloak</connection>
        <developerConnection>scm:git:https://github.com/optionfactory/optionfactory-keycloak</developerConnection>
        <url>https://github.com/optionfactory/optionfactory-keycloak</url>
    </scm>
    <licenses>
        <license>
            <name>Simplified BSD License</name>
            <url>http://www.opensource.org/licenses/BSD-3-Clause</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Roberto Ferranti</name>
            <email>roberto.ferranti@optionfactory.net</email>
            <organization>OptionFactory</organization>
            <organizationUrl>http://optionfactory.net</organizationUrl>
        </developer>
    </developers>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <modules>
        <module>optionfactory-keycloak-providers</module>
        <module>optionfactory-keycloak-remoting</module>
        <module>optionfactory-keycloak-validation</module>
        <module>optionfactory-keycloak-email-sender</module>
        <module>optionfactory-keycloak-login-stats</module>
        <module>optionfactory-keycloak-provisioning-api</module>
        <module>optionfactory-keycloak-welcome</module>
        <module>optionfactory-keycloak-bootstrap</module>
        <module>optionfactory-keycloak-apple-identity-provider</module>
        <module>optionfactory-keycloak-authenticators</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <kc.version>24.0.1</kc.version>
        <resteasy.reactive.common.version>3.2.9.Final</resteasy.reactive.common.version>        
        <libphonenumber.version>8.13.31</libphonenumber.version>
        <hibernatevalidator.version>8.0.1.Final</hibernatevalidator.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-server-spi</artifactId>
                <version>${kc.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-services</artifactId>
                <version>${kc.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-server-spi-private</artifactId>
                <version>${kc.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-saml-core</artifactId>
                <version>${kc.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-saml-adapter-api-public</artifactId>
                <version>${kc.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-model-jpa</artifactId>
                <version>${kc.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.quarkus.resteasy.reactive</groupId>
                <artifactId>resteasy-reactive-common</artifactId>
                <version>${resteasy.reactive.common.version}</version>    
                <scope>provided</scope>
            </dependency>
            
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernatevalidator.version}</version>
                <scope>provided</scope>
            </dependency>        
            <dependency>
                <groupId>com.googlecode.libphonenumber</groupId>
                <artifactId>libphonenumber</artifactId>
                <version>${libphonenumber.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>ossrh</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.4.0</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <additionalparam>-Xdoclint:none</additionalparam>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
